--- a/2_EDA_and_Modelling.ipynb
+++ b/2_EDA_and_Modelling.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -58,9 +58,9 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Unnamed: 0</th>\n",
-       "      <th>track_ids</th>\n",
+       "      <th>track_id</th>\n",
        "      <th>track_name</th>\n",
-       "      <th>artists</th>\n",
+       "      <th>first_artist</th>\n",
        "      <th>danceability</th>\n",
        "      <th>energy</th>\n",
        "      <th>key</th>\n",
@@ -75,49 +75,51 @@
        "      <th>uri</th>\n",
        "      <th>duration_ms</th>\n",
        "      <th>time_signature</th>\n",
+       "      <th>mood</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>1a73gcEg6h6Re6hHXoVltJ</td>\n",
-       "      <td>FTCU</td>\n",
-       "      <td>Nicki Minaj</td>\n",
-       "      <td>0.928</td>\n",
-       "      <td>0.458</td>\n",
-       "      <td>11</td>\n",
-       "      <td>-6.751</td>\n",
+       "      <td>7tqhbajSfrz2F7E1Z75ASX</td>\n",
+       "      <td>Ain't No Mountain High Enough</td>\n",
+       "      <td>Marvin Gaye</td>\n",
+       "      <td>0.663</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>-10.87</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.187</td>\n",
-       "      <td>0.0175</td>\n",
-       "      <td>0.000446</td>\n",
-       "      <td>0.118</td>\n",
-       "      <td>0.242</td>\n",
-       "      <td>144.995</td>\n",
-       "      <td>spotify:track:1a73gcEg6h6Re6hHXoVltJ</td>\n",
-       "      <td>172138</td>\n",
+       "      <td>0.032</td>\n",
+       "      <td>0.43</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.184</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>129.991</td>\n",
+       "      <td>spotify:track:7tqhbajSfrz2F7E1Z75ASX</td>\n",
+       "      <td>151667</td>\n",
        "      <td>4</td>\n",
+       "      <td>happy</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0               track_ids track_name      artists  danceability  \\\n",
-       "0           0  1a73gcEg6h6Re6hHXoVltJ       FTCU  Nicki Minaj         0.928   \n",
+       "   Unnamed: 0                track_id                     track_name  \\\n",
+       "0           0  7tqhbajSfrz2F7E1Z75ASX  Ain't No Mountain High Enough   \n",
        "\n",
-       "   energy  key  loudness  mode  speechiness  acousticness  instrumentalness  \\\n",
-       "0   0.458   11    -6.751     1        0.187        0.0175          0.000446   \n",
+       "  first_artist  danceability  energy  key  loudness  mode  speechiness  \\\n",
+       "0  Marvin Gaye         0.663     0.6    7    -10.87     1        0.032   \n",
        "\n",
-       "   liveness  valence    tempo                                   uri  \\\n",
-       "0     0.118    0.242  144.995  spotify:track:1a73gcEg6h6Re6hHXoVltJ   \n",
+       "   acousticness  instrumentalness  liveness  valence    tempo  \\\n",
+       "0          0.43               0.0     0.184      0.8  129.991   \n",
        "\n",
-       "   duration_ms  time_signature  \n",
-       "0       172138               4  "
+       "                                    uri  duration_ms  time_signature   mood  \n",
+       "0  spotify:track:7tqhbajSfrz2F7E1Z75ASX       151667               4  happy  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -160,9 +162,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>track_ids</th>\n",
+       "      <th>track_id</th>\n",
        "      <th>track_name</th>\n",
-       "      <th>artists</th>\n",
+       "      <th>first_artist</th>\n",
        "      <th>danceability</th>\n",
        "      <th>energy</th>\n",
        "      <th>key</th>\n",
@@ -177,48 +179,50 @@
        "      <th>uri</th>\n",
        "      <th>duration_ms</th>\n",
        "      <th>time_signature</th>\n",
+       "      <th>mood</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1a73gcEg6h6Re6hHXoVltJ</td>\n",
-       "      <td>FTCU</td>\n",
-       "      <td>Nicki Minaj</td>\n",
-       "      <td>0.928</td>\n",
-       "      <td>0.458</td>\n",
-       "      <td>11</td>\n",
-       "      <td>-6.751</td>\n",
+       "      <td>7tqhbajSfrz2F7E1Z75ASX</td>\n",
+       "      <td>Ain't No Mountain High Enough</td>\n",
+       "      <td>Marvin Gaye</td>\n",
+       "      <td>0.663</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>-10.87</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.187</td>\n",
-       "      <td>0.0175</td>\n",
-       "      <td>0.000446</td>\n",
-       "      <td>0.118</td>\n",
-       "      <td>0.242</td>\n",
-       "      <td>144.995</td>\n",
-       "      <td>spotify:track:1a73gcEg6h6Re6hHXoVltJ</td>\n",
-       "      <td>172138</td>\n",
+       "      <td>0.032</td>\n",
+       "      <td>0.43</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.184</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>129.991</td>\n",
+       "      <td>spotify:track:7tqhbajSfrz2F7E1Z75ASX</td>\n",
+       "      <td>151667</td>\n",
        "      <td>4</td>\n",
+       "      <td>happy</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                track_ids track_name      artists  danceability  energy  key  \\\n",
-       "0  1a73gcEg6h6Re6hHXoVltJ       FTCU  Nicki Minaj         0.928   0.458   11   \n",
+       "                 track_id                     track_name first_artist  \\\n",
+       "0  7tqhbajSfrz2F7E1Z75ASX  Ain't No Mountain High Enough  Marvin Gaye   \n",
        "\n",
-       "   loudness  mode  speechiness  acousticness  instrumentalness  liveness  \\\n",
-       "0    -6.751     1        0.187        0.0175          0.000446     0.118   \n",
+       "   danceability  energy  key  loudness  mode  speechiness  acousticness  \\\n",
+       "0         0.663     0.6    7    -10.87     1        0.032          0.43   \n",
        "\n",
-       "   valence    tempo                                   uri  duration_ms  \\\n",
-       "0    0.242  144.995  spotify:track:1a73gcEg6h6Re6hHXoVltJ       172138   \n",
+       "   instrumentalness  liveness  valence    tempo  \\\n",
+       "0               0.0     0.184      0.8  129.991   \n",
        "\n",
-       "   time_signature  \n",
-       "0               4  "
+       "                                    uri  duration_ms  time_signature   mood  \n",
+       "0  spotify:track:7tqhbajSfrz2F7E1Z75ASX       151667               4  happy  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,6 +237,221 @@
    "metadata": {},
    "source": [
     "# Exploring the Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>danceability</th>\n",
+       "      <th>energy</th>\n",
+       "      <th>key</th>\n",
+       "      <th>loudness</th>\n",
+       "      <th>mode</th>\n",
+       "      <th>speechiness</th>\n",
+       "      <th>acousticness</th>\n",
+       "      <th>instrumentalness</th>\n",
+       "      <th>liveness</th>\n",
+       "      <th>valence</th>\n",
+       "      <th>tempo</th>\n",
+       "      <th>duration_ms</th>\n",
+       "      <th>time_signature</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1420.000000</td>\n",
+       "      <td>1420.000000</td>\n",
+       "      <td>1420.000000</td>\n",
+       "      <td>1420.000000</td>\n",
+       "      <td>1420.000000</td>\n",
+       "      <td>1420.000000</td>\n",
+       "      <td>1420.000000</td>\n",
+       "      <td>1420.000000</td>\n",
+       "      <td>1420.000000</td>\n",
+       "      <td>1420.000000</td>\n",
+       "      <td>1420.000000</td>\n",
+       "      <td>1420.000000</td>\n",
+       "      <td>1420.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>0.610639</td>\n",
+       "      <td>0.556466</td>\n",
+       "      <td>5.149296</td>\n",
+       "      <td>-8.322734</td>\n",
+       "      <td>0.706338</td>\n",
+       "      <td>0.065444</td>\n",
+       "      <td>0.365333</td>\n",
+       "      <td>0.056656</td>\n",
+       "      <td>0.169778</td>\n",
+       "      <td>0.477549</td>\n",
+       "      <td>118.535581</td>\n",
+       "      <td>211259.254930</td>\n",
+       "      <td>3.895775</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.147548</td>\n",
+       "      <td>0.222184</td>\n",
+       "      <td>3.564007</td>\n",
+       "      <td>3.620045</td>\n",
+       "      <td>0.455599</td>\n",
+       "      <td>0.065977</td>\n",
+       "      <td>0.316665</td>\n",
+       "      <td>0.173492</td>\n",
+       "      <td>0.135339</td>\n",
+       "      <td>0.242011</td>\n",
+       "      <td>28.194598</td>\n",
+       "      <td>51346.174221</td>\n",
+       "      <td>0.377834</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.112000</td>\n",
+       "      <td>0.033200</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-24.646000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.023600</td>\n",
+       "      <td>0.000008</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.023200</td>\n",
+       "      <td>0.027700</td>\n",
+       "      <td>46.923000</td>\n",
+       "      <td>87000.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.511000</td>\n",
+       "      <td>0.392000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>-10.477750</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.032400</td>\n",
+       "      <td>0.070225</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.096775</td>\n",
+       "      <td>0.266000</td>\n",
+       "      <td>97.040750</td>\n",
+       "      <td>176354.500000</td>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>0.621000</td>\n",
+       "      <td>0.568500</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>-7.753500</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.041950</td>\n",
+       "      <td>0.271000</td>\n",
+       "      <td>0.000034</td>\n",
+       "      <td>0.115000</td>\n",
+       "      <td>0.470500</td>\n",
+       "      <td>118.391500</td>\n",
+       "      <td>207527.500000</td>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>0.715000</td>\n",
+       "      <td>0.731000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>-5.642000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.066625</td>\n",
+       "      <td>0.635250</td>\n",
+       "      <td>0.004542</td>\n",
+       "      <td>0.189000</td>\n",
+       "      <td>0.674000</td>\n",
+       "      <td>135.232500</td>\n",
+       "      <td>240149.750000</td>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>0.978000</td>\n",
+       "      <td>0.997000</td>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>0.080000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.563000</td>\n",
+       "      <td>0.993000</td>\n",
+       "      <td>0.949000</td>\n",
+       "      <td>0.951000</td>\n",
+       "      <td>0.980000</td>\n",
+       "      <td>209.942000</td>\n",
+       "      <td>486187.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       danceability       energy          key     loudness         mode  \\\n",
+       "count   1420.000000  1420.000000  1420.000000  1420.000000  1420.000000   \n",
+       "mean       0.610639     0.556466     5.149296    -8.322734     0.706338   \n",
+       "std        0.147548     0.222184     3.564007     3.620045     0.455599   \n",
+       "min        0.112000     0.033200     0.000000   -24.646000     0.000000   \n",
+       "25%        0.511000     0.392000     2.000000   -10.477750     0.000000   \n",
+       "50%        0.621000     0.568500     5.000000    -7.753500     1.000000   \n",
+       "75%        0.715000     0.731000     8.000000    -5.642000     1.000000   \n",
+       "max        0.978000     0.997000    11.000000     0.080000     1.000000   \n",
+       "\n",
+       "       speechiness  acousticness  instrumentalness     liveness      valence  \\\n",
+       "count  1420.000000   1420.000000       1420.000000  1420.000000  1420.000000   \n",
+       "mean      0.065444      0.365333          0.056656     0.169778     0.477549   \n",
+       "std       0.065977      0.316665          0.173492     0.135339     0.242011   \n",
+       "min       0.023600      0.000008          0.000000     0.023200     0.027700   \n",
+       "25%       0.032400      0.070225          0.000000     0.096775     0.266000   \n",
+       "50%       0.041950      0.271000          0.000034     0.115000     0.470500   \n",
+       "75%       0.066625      0.635250          0.004542     0.189000     0.674000   \n",
+       "max       0.563000      0.993000          0.949000     0.951000     0.980000   \n",
+       "\n",
+       "             tempo    duration_ms  time_signature  \n",
+       "count  1420.000000    1420.000000     1420.000000  \n",
+       "mean    118.535581  211259.254930        3.895775  \n",
+       "std      28.194598   51346.174221        0.377834  \n",
+       "min      46.923000   87000.000000        1.000000  \n",
+       "25%      97.040750  176354.500000        4.000000  \n",
+       "50%     118.391500  207527.500000        4.000000  \n",
+       "75%     135.232500  240149.750000        4.000000  \n",
+       "max     209.942000  486187.000000        5.000000  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "track_df.describe()"
    ]
   },
   {
