added cross valdiation

--- a/2_EDA_and_Modelling.ipynb
+++ b/2_EDA_and_Modelling.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
        "0  spotify:track:7tqhbajSfrz2F7E1Z75ASX       151667               4  happy  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "0  spotify:track:7tqhbajSfrz2F7E1Z75ASX       151667               4  happy  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
        "max     209.942000  486187.000000        5.000000  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,12 +462,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# checking if any missing values present"
+    "## Checking if any missing values present"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -520,17 +520,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 66,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# exploring relation between features using correlation techniques"
+    "## Exploring relationship between features using correlation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -658,26 +656,26 @@
        "4      0.574015          0.000007  0.051196  0.606217  0.436422  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "numeric_df = track_df[['danceability','energy','key','loudness','mode','speechiness','acousticness','instrumentalness','liveness','valence','tempo']]\n",
+    "features_df = track_df[['danceability','energy','key','loudness','mode','speechiness','acousticness','instrumentalness','liveness','valence','tempo']]\n",
     "\n",
     "# scaling data\n",
     "scaler = MinMaxScaler()\n",
     "\n",
-    "scaled_df = scaler.fit_transform(numeric_df)\n",
-    "scaled_df = pd.DataFrame(scaled_df, columns=numeric_df.columns)\n",
+    "scaled_df = scaler.fit_transform(features_df)\n",
+    "scaled_df = pd.DataFrame(scaled_df, columns=features_df.columns)\n",
     "\n",
     "scaled_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -727,13 +725,13 @@
    ],
    "source": [
     "# finding correlation between features\n",
-    "corr_matrix = numeric_df.corr()\n",
+    "corr_matrix = features_df.corr()\n",
     "print (corr_matrix)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -748,6 +746,7 @@
     }
    ],
    "source": [
+    "#For better visualizaion, using a heatmap\n",
     "%matplotlib inline\n",
     "plt.figure(figsize=(10, 8))\n",
     "sns.heatmap(abs(corr_matrix), annot=True, cmap='Blues', fmt=\".2f\")\n",
@@ -756,8 +755,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`Loudness` and `Energy` have an almost 80% correlation. While we can drop one of these, we can run our model first with both of them as features, and second time, with one of them dropped. We drop the one with a lower variance since theoretically, it will have lesser explainaibility capacity. Then comparing the performance, we can make a decision."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -776,21 +782,198 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hence we can drop `Loudness` as a feature for our check."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Encoding our categorical classes"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3])"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "encoder = LabelEncoder()\n",
+    "encoder.fit(track_df.mood)\n",
+    "encoded_mood = encoder.transform(track_df.mood)\n",
+    "\n",
+    "np.unique (encoded_mood)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['calm', 'energetic', 'happy', 'sad'], dtype=object)"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "encoder.inverse_transform([0,1,2,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "track_df['y'] = encoded_mood "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Choosing an appropriate model with Stratified K fold Cross Validation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We know the features are in `features_df` while the target classes are in `track_df['y]`. First let us perform a check with two models, kNN and Random Forest to check the performance of the model with \n",
+    "1. all the features \n",
+    "2. `Loudness` droppped"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Selecting a Model using K Fold Cross Validation (with all the features)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### kNN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_11760\\3601518361.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  numeric_df.drop('loudness', axis=1, inplace=True)\n"
+      "knn with 10 nn:  0.38367301231802914\n",
+      "knn with 20 nn:  0.40545726017170586\n",
+      "knn with 100 nn:  0.3786711459499813\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "#knn\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "import statistics as stat\n",
+    "\n",
+    "knn = KNeighborsClassifier(n_neighbors=10)\n",
+    "print(\"knn with 10 nn: \",stat.mean(cross_val_score(knn, features_df,track_df['y'], cv = 15)))\n",
+    "\n",
+    "\n",
+    "\n",
+    "knn = KNeighborsClassifier(n_neighbors=20)\n",
+    "print(\"knn with 20 nn: \",stat.mean(cross_val_score(knn, features_df,track_df['y'], cv = 15)))\n",
+    "\n",
+    "\n",
+    "knn = KNeighborsClassifier(n_neighbors=100)\n",
+    "print(\"knn with 100 nn: \",stat.mean(cross_val_score(knn, features_df,track_df['y'], cv = 15)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We are also noting that the model performs similary for 10,20 and 100 nearest neighbors. The max performance is achieved at n = 20. Hence we are better off choosing _20 nearest neighbors_."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Random Forests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rf with 100 trees:  0.5436058230683091\n",
+      "rf with 200 trees:  0.5590593505039194\n",
+      "rf with 500 trees:  0.5492422545726017\n"
+     ]
+    }
+   ],
+   "source": [
+    "#random forest\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "rf = RandomForestClassifier(n_estimators=100)\n",
+    "print(\"rf with 100 trees: \",stat.mean(cross_val_score(rf, features_df,track_df['y'], cv = 15)))\n",
+    "\n",
+    "rf = RandomForestClassifier(n_estimators=200)\n",
+    "print(\"rf with 200 trees: \",stat.mean(cross_val_score(rf, features_df,track_df['y'], cv = 15)))\n",
+    "\n",
+    "rf = RandomForestClassifier(n_estimators=500)\n",
+    "print(\"rf with 500 trees: \",stat.mean(cross_val_score(rf, features_df,track_df['y'], cv = 15)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Again, we are better off using n = 200 trees since the model plateaus with increase in number of trees. 200 trees (which is the default number of trees in the model) is sufficient to use as a parameter for our model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cross Validating with Loudness dropped as a feature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -910,76 +1093,110 @@
        "4          0.000007    0.0707    0.605  118.068  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# since loudness has the lower variance, we are dropping it from the track features\n",
-    "numeric_df.drop('loudness', axis=1, inplace=True)\n",
-    "numeric_df.head()"
+    "features_df2 = features_df.drop('loudness', axis=1)\n",
+    "features_df2.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Doing the same that we did above, but with modified features dataframe."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([0, 1, 2, 3])"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "knn with 10 nn:  0.3463904441955954\n",
+      "knn with 20 nn:  0.356207540126913\n",
+      "knn with 100 nn:  0.3420530048525569\n"
+     ]
     }
    ],
    "source": [
-    "encoder = LabelEncoder()\n",
-    "encoder.fit(track_df.mood)\n",
-    "encoded_mood = encoder.transform(track_df.mood)\n",
+    "#knn\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "import statistics as stat\n",
     "\n",
-    "np.unique (encoded_mood)"
+    "knn = KNeighborsClassifier(n_neighbors=10)\n",
+    "print(\"knn with 10 nn: \",stat.mean(cross_val_score(knn, features_df2,track_df['y'], cv = 15)))\n",
+    "\n",
+    "\n",
+    "\n",
+    "knn = KNeighborsClassifier(n_neighbors=20)\n",
+    "print(\"knn with 20 nn: \",stat.mean(cross_val_score(knn, features_df2,track_df['y'], cv = 15)))\n",
+    "\n",
+    "\n",
+    "knn = KNeighborsClassifier(n_neighbors=100)\n",
+    "print(\"knn with 100 nn: \",stat.mean(cross_val_score(knn, features_df2,track_df['y'], cv = 15)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array(['calm', 'energetic', 'happy', 'sad'], dtype=object)"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rf with 100 trees:  0.5223889511011571\n",
+      "rf with 200 trees:  0.5393355729749907\n",
+      "rf with 500 trees:  0.5365061590145577\n"
+     ]
     }
    ],
    "source": [
-    "encoder.inverse_transform([0,1,2,3])"
+    "#random forest\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "rf = RandomForestClassifier(n_estimators=100)\n",
+    "print(\"rf with 100 trees: \",stat.mean(cross_val_score(rf, features_df2,track_df['y'], cv = 15)))\n",
+    "\n",
+    "rf = RandomForestClassifier(n_estimators=200)\n",
+    "print(\"rf with 200 trees: \",stat.mean(cross_val_score(rf, features_df2,track_df['y'], cv = 15)))\n",
+    "\n",
+    "rf = RandomForestClassifier(n_estimators=500)\n",
+    "print(\"rf with 500 trees: \",stat.mean(cross_val_score(rf, features_df2,track_df['y'], cv = 15)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is comparatively worse than with the model trained with all of the features. Hence, we keep all of the features!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
-    "track_df['y'] = encoded_mood "
+    "#delete the dataframe since we do not need it!\n",
+    "del(features_df2)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "spotify",
    "language": "python",
-   "name": "python3"
+   "name": "spotify"
   },
   "language_info": {
    "codemirror_mode": {
@@ -991,7 +1208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
