using scaled features now

--- a/2_EDA_and_Modelling.ipynb
+++ b/2_EDA_and_Modelling.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
        "0  spotify:track:7tqhbajSfrz2F7E1Z75ASX       151667               4  happy  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "0  spotify:track:7tqhbajSfrz2F7E1Z75ASX       151667               4  happy  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
        "max     209.942000  486187.000000        5.000000  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
        "4      0.574015          0.000007  0.051196  0.606217  0.436422  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,14 +668,13 @@
     "scaler = MinMaxScaler()\n",
     "\n",
     "scaled_df = scaler.fit_transform(features_df)\n",
-    "scaled_df = pd.DataFrame(scaled_df, columns=features_df.columns)\n",
-    "\n",
-    "scaled_df.head()"
+    "features_df = pd.DataFrame(scaled_df, columns=features_df.columns)\n",
+    "features_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -775,8 +774,8 @@
     }
    ],
    "source": [
-    "variance_loudness = np.var(scaled_df['loudness'])\n",
-    "variance_energy = np.var(scaled_df['energy'])\n",
+    "variance_loudness = np.var(features_df['loudness'])\n",
+    "variance_energy = np.var(features_df['energy'])\n",
     "\n",
     "print(variance_loudness, variance_energy)"
    ]
@@ -796,8 +795,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will use One Hot Encoding since there is no order to the classes. We do not want to introduce bias in our models and force an order. It must be equally likely to pick any of the classes. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +812,7 @@
        "array([0, 1, 2, 3])"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -816,12 +822,12 @@
     "encoder.fit(track_df.mood)\n",
     "encoded_mood = encoder.transform(track_df.mood)\n",
     "\n",
-    "np.unique (encoded_mood)"
+    "np.unique(encoded_mood)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +836,7 @@
        "array(['calm', 'energetic', 'happy', 'sad'], dtype=object)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,16 +886,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "knn with 10 nn:  0.38367301231802914\n",
-      "knn with 20 nn:  0.40545726017170586\n",
-      "knn with 100 nn:  0.3786711459499813\n"
+      "knn with 10 nn:  0.4999850690556178\n",
+      "knn with 20 nn:  0.5211048898842852\n",
+      "knn with 100 nn:  0.5091377379619261\n"
      ]
     }
    ],
@@ -928,16 +934,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rf with 100 trees:  0.5436058230683091\n",
-      "rf with 200 trees:  0.5590593505039194\n",
-      "rf with 500 trees:  0.5492422545726017\n"
+      "rf with 100 trees:  0.5414333706606943\n",
+      "rf with 200 trees:  0.5436207540126913\n",
+      "rf with 500 trees:  0.5400671892497201\n"
      ]
     }
    ],
@@ -971,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -1010,90 +1016,90 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.663</td>\n",
-       "      <td>0.600</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0320</td>\n",
-       "      <td>0.430</td>\n",
+       "      <td>0.636259</td>\n",
+       "      <td>0.588089</td>\n",
+       "      <td>0.636364</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.015573</td>\n",
+       "      <td>0.433027</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.1840</td>\n",
-       "      <td>0.800</td>\n",
-       "      <td>129.991</td>\n",
+       "      <td>0.173313</td>\n",
+       "      <td>0.810984</td>\n",
+       "      <td>0.509560</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.527</td>\n",
-       "      <td>0.415</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.1220</td>\n",
-       "      <td>0.457</td>\n",
-       "      <td>0.000017</td>\n",
-       "      <td>0.1170</td>\n",
-       "      <td>0.515</td>\n",
-       "      <td>78.169</td>\n",
+       "      <td>0.479215</td>\n",
+       "      <td>0.396140</td>\n",
+       "      <td>0.363636</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.182425</td>\n",
+       "      <td>0.460217</td>\n",
+       "      <td>0.000018</td>\n",
+       "      <td>0.101099</td>\n",
+       "      <td>0.511708</td>\n",
+       "      <td>0.191671</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.572</td>\n",
-       "      <td>0.418</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0349</td>\n",
-       "      <td>0.635</td>\n",
+       "      <td>0.531178</td>\n",
+       "      <td>0.399253</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.0961</td>\n",
-       "      <td>0.694</td>\n",
-       "      <td>104.566</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.020949</td>\n",
+       "      <td>0.639474</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.078573</td>\n",
+       "      <td>0.699674</td>\n",
+       "      <td>0.353597</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.769</td>\n",
-       "      <td>0.367</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0312</td>\n",
-       "      <td>0.684</td>\n",
-       "      <td>0.000016</td>\n",
-       "      <td>0.0810</td>\n",
-       "      <td>0.535</td>\n",
-       "      <td>103.621</td>\n",
+       "      <td>0.758661</td>\n",
+       "      <td>0.346337</td>\n",
+       "      <td>0.181818</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.014090</td>\n",
+       "      <td>0.688819</td>\n",
+       "      <td>0.000017</td>\n",
+       "      <td>0.062298</td>\n",
+       "      <td>0.532710</td>\n",
+       "      <td>0.347800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.650</td>\n",
-       "      <td>0.306</td>\n",
-       "      <td>9</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0393</td>\n",
-       "      <td>0.570</td>\n",
+       "      <td>0.621247</td>\n",
+       "      <td>0.283046</td>\n",
+       "      <td>0.818182</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.029106</td>\n",
+       "      <td>0.574015</td>\n",
        "      <td>0.000007</td>\n",
-       "      <td>0.0707</td>\n",
-       "      <td>0.605</td>\n",
-       "      <td>118.068</td>\n",
+       "      <td>0.051196</td>\n",
+       "      <td>0.606217</td>\n",
+       "      <td>0.436422</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   danceability  energy  key  mode  speechiness  acousticness  \\\n",
-       "0         0.663   0.600    7     1       0.0320         0.430   \n",
-       "1         0.527   0.415    4     0       0.1220         0.457   \n",
-       "2         0.572   0.418    0     1       0.0349         0.635   \n",
-       "3         0.769   0.367    2     1       0.0312         0.684   \n",
-       "4         0.650   0.306    9     1       0.0393         0.570   \n",
+       "   danceability    energy       key  mode  speechiness  acousticness  \\\n",
+       "0      0.636259  0.588089  0.636364   1.0     0.015573      0.433027   \n",
+       "1      0.479215  0.396140  0.363636   0.0     0.182425      0.460217   \n",
+       "2      0.531178  0.399253  0.000000   1.0     0.020949      0.639474   \n",
+       "3      0.758661  0.346337  0.181818   1.0     0.014090      0.688819   \n",
+       "4      0.621247  0.283046  0.818182   1.0     0.029106      0.574015   \n",
        "\n",
-       "   instrumentalness  liveness  valence    tempo  \n",
-       "0          0.000000    0.1840    0.800  129.991  \n",
-       "1          0.000017    0.1170    0.515   78.169  \n",
-       "2          0.000000    0.0961    0.694  104.566  \n",
-       "3          0.000016    0.0810    0.535  103.621  \n",
-       "4          0.000007    0.0707    0.605  118.068  "
+       "   instrumentalness  liveness   valence     tempo  \n",
+       "0          0.000000  0.173313  0.810984  0.509560  \n",
+       "1          0.000018  0.101099  0.511708  0.191671  \n",
+       "2          0.000000  0.078573  0.699674  0.353597  \n",
+       "3          0.000017  0.062298  0.532710  0.347800  \n",
+       "4          0.000007  0.051196  0.606217  0.436422  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1113,16 +1119,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "knn with 10 nn:  0.3463904441955954\n",
-      "knn with 20 nn:  0.356207540126913\n",
-      "knn with 100 nn:  0.3420530048525569\n"
+      "knn with 10 nn:  0.49782754759238523\n",
+      "knn with 20 nn:  0.5056065696155282\n",
+      "knn with 100 nn:  0.5084135871593878\n"
      ]
     }
    ],
@@ -1147,16 +1153,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rf with 100 trees:  0.5223889511011571\n",
-      "rf with 200 trees:  0.5393355729749907\n",
-      "rf with 500 trees:  0.5365061590145577\n"
+      "rf with 100 trees:  0.5343934303844718\n",
+      "rf with 200 trees:  0.5386188876446435\n",
+      "rf with 500 trees:  0.5329451287793953\n"
      ]
     }
    ],
@@ -1183,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
