--- a/2_EDA_and_Modelling.ipynb
+++ b/2_EDA_and_Modelling.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
        "0  spotify:track:7tqhbajSfrz2F7E1Z75ASX       151667               4  happy  "
       ]
      },
-     "execution_count": 119,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "0  spotify:track:7tqhbajSfrz2F7E1Z75ASX       151667               4  happy  "
       ]
      },
-     "execution_count": 120,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
        "max     209.942000  486187.000000        5.000000  "
       ]
      },
-     "execution_count": 121,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
        "4      0.574015          0.000007  0.051196  0.606217  0.436422  "
       ]
      },
-     "execution_count": 124,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
        "array([0, 1, 2, 3])"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -836,7 +836,7 @@
        "array(['calm', 'energetic', 'happy', 'sad'], dtype=object)"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -847,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -886,16 +886,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "knn with 10 nn:  0.4999850690556178\n",
-      "knn with 20 nn:  0.5211048898842852\n",
-      "knn with 100 nn:  0.5091377379619261\n"
+      "knn with 10 nn:  0.4999776035834267\n",
+      "knn with 20 nn:  0.523919372900336\n",
+      "knn with 100 nn:  0.5084359835759612\n"
      ]
     }
    ],
@@ -934,16 +934,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rf with 100 trees:  0.5414333706606943\n",
-      "rf with 200 trees:  0.5436207540126913\n",
-      "rf with 500 trees:  0.5400671892497201\n"
+      "rf with 100 trees:  0.5429189996267264\n",
+      "rf with 200 trees:  0.5428592758491975\n",
+      "rf with 500 trees:  0.545726017170586\n"
      ]
     }
    ],
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1099,7 +1099,7 @@
        "4          0.000007  0.051196  0.606217  0.436422  "
       ]
      },
-     "execution_count": 133,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1119,16 +1119,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "knn with 10 nn:  0.49782754759238523\n",
-      "knn with 20 nn:  0.5056065696155282\n",
-      "knn with 100 nn:  0.5084135871593878\n"
+      "knn with 10 nn:  0.4964165733482643\n",
+      "knn with 20 nn:  0.5063232549458754\n",
+      "knn with 100 nn:  0.5077118327734229\n"
      ]
     }
    ],
@@ -1153,16 +1153,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rf with 100 trees:  0.5343934303844718\n",
-      "rf with 200 trees:  0.5386188876446435\n",
-      "rf with 500 trees:  0.5329451287793953\n"
+      "rf with 100 trees:  0.527331093691676\n",
+      "rf with 200 trees:  0.5358118701007839\n",
+      "rf with 500 trees:  0.5357745427398283\n"
      ]
     }
    ],
@@ -1189,20 +1189,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "#delete the dataframe since we do not need it!\n",
     "del(features_df2)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### logistic regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lr: 0.5491750653228816\n"
+     ]
+    }
+   ],
+   "source": [
+    "# logistic regression\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "lr = LogisticRegression()\n",
+    "print(\"lr:\",stat.mean(cross_val_score(lr, features_df,track_df['y'], cv = 15)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "spotify",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "spotify"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1214,7 +1249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
