--- a/3_Model_Visualization.ipynb
+++ b/3_Model_Visualization.ipynb
@@ -10,14 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "id": "11b46529-277a-41b1-86f5-580a1794b5e0",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np \n",
     "import pandas as pd\n",
-    "import plotly.express as px"
+    "#import plotly.express as px\n",
+    "import pickle"
    ]
   },
   {
@@ -30,20 +31,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7d7f9aae-5e81-4382-ba09-5eedd69f01e0",
    "metadata": {},
    "outputs": [],
    "source": [
     "model_testing = pd.read_csv('bbyearend.csv')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3300970e",
+   "metadata": {},
+   "source": [
+    "## Loading the Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c991d687",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = pickle.load(open('model.pk1','rb'))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "spotify",
    "language": "python",
-   "name": "python3"
+   "name": "spotify"
   },
   "language_info": {
    "codemirror_mode": {
@@ -55,7 +74,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
